--- a/style.css
+++ b/style.css
@@ -429,6 +429,10 @@ body.dark .navbar-scrolled {
     z-index: 1;
 }
 
+input {
+    resize: none;
+}
+
 .hero-content {
     position: relative;
     z-index: 2; 
