--- a/style.css
+++ b/style.css
@@ -110,6 +110,10 @@ h1, h2, h3, h4 {
     opacity: 0;
 }
 
+.visible {
+    opacity: 1;
+}
+
 #main-content {
     transition: opacity 0.5s ease-in;
 }
