--- a/style.css
+++ b/style.css
@@ -1317,14 +1317,12 @@ input::placeholder {
 .carousel-controls .nav-button {
   margin-top: 680px;
   position: static;       
-  background-color: #fff;
-  color: #000;
+  color: #fff;
   border: none;
   border-radius: 50%;
   padding: 10px 14px;
   font-size: 1.5rem;
   cursor: pointer;
-  transition: background-color 0.3s, transform 0.3s;
 }
 
 input::placeholder,
@@ -1335,10 +1333,6 @@ textarea::placeholder {
 input,
 textarea {
   text-align: left; 
-}
-.carousel-controls .nav-button:hover {
-  background-color: #fff;
-  color: #0ff;
 }
 
 @media (max-width: 768px) {
