--- a/style.css
+++ b/style.css
@@ -676,6 +676,7 @@ body.dark .card-back {
 .carousel {
     width: 100%;
     height: 100%;
+    max-width: 400px;
     position: absolute;
     transform-style: preserve-3d;
     transition: transform 0.5s;
@@ -1378,22 +1379,37 @@ textarea {
   #mobile-gallery {
     display: flex;
     width: 100%;
+    max-width: 400px;
+margin: auto;
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
     justify-content: center;
     scrollbar-width: none;
+border-radius: 6px;
   }
 
   #mobile-gallery::-webkit-scrollbar { display: none; }
 
   #mobile-gallery .gallery-track {
     display: flex;
+    width: 100%;
     gap: 12px;
     padding: 12px;
+    animation: scroll 12s linear infinite; 
+  }
+    
+  @keyframes scroll {
+  0% { transform: translateX(0); }
+  33% { transform: translateX(-100%); }
+  66% { transform: translateX(-200%); }
+  100% { transform: translateX(0); }
   }
 
   #mobile-gallery img {
-    flex: 0 0 75%;
+    flex: 0 0 100%;
+    objectif-fit: cover;
+    width: 100%;
+    height: 450px;
     max-width: 320px;
     max-height: 450px;
     border-radius: 16px;
