--- a/style.css
+++ b/style.css
@@ -671,6 +671,7 @@ body.dark .card-back {
     align-items: center;
     margin-bottom: 8rem;
     margin-top: 8rem; 
+    margin-bottom: 220px;
 }
 
 .carousel {
