--- a/style.css
+++ b/style.css
@@ -910,6 +910,8 @@ text-area {
   display: flex;
   gap: 20px;
   margin-top: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .icon-large {
