--- a/style.css
+++ b/style.css
@@ -1087,6 +1087,8 @@ body.dark .footer-social a i {
 }
 
 .bande-demo-large {
+  display: flex;
+  flex-direction: column;
   width: 50%;
   aspect-ratio: 2.39 / 1;
 }
